@startuml diagram
Platform *-- Logger
Platform *-- FilesManager

abstract class Platform
abstract class Logger
abstract class FilesManager

package android {
    Platform <|-- AndroidPlatform
    Logger <|-- AndroidLogger
    FilesManager <|-- AndroidFilesManager

    AndroidPlatform *-- AndroidFilesManager
    AndroidPlatform *-- AndroidLogger
}

package linux {
    Platform <|-- LinuxPlatform
    Logger <|-- LinuxLogger
    FilesManager <|-- LinuxFilesManager

    LinuxPlatform *-- LinuxFilesManager
    LinuxPlatform *-- LinuxLogger
}

package shared {
  Platform *-- EventBus
}

@enduml
